Fixed navbar collapse

--- a/css/default.css
+++ b/css/default.css
@@ -200,7 +200,7 @@ h4 {
 }
 
 .services-icon {
-	font-size: 10em;
+	font-size: 8em;
 }
 
 .text-center {
